--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -1,3 +1,12 @@
+<!-- Content Header (Page header) -->
+<section class="content-header">
+	<h1></h1>
+	<ol class="breadcrumb">
+		<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+		<li class="active">Painel Principal</li>
+	</ol>
+</section>
+
 <!-- Main content -->
 <section class="content">
 	<!-- Small boxes (Stat box) -->
