--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -8,9 +8,14 @@
 </section>
 
 <!-- Main content -->
-<section class="content">
+<section class="content" data-ng-controller="DashboardController as vm" data-ng-init="vm.init()">
 	<!-- Small boxes (Stat box) -->
-	<div class="row">
+	<div class="row" data-ng-intro-options="vm.introOptions", data-ng-intro-method="vm.startTour">
+
+		<div class="col-md-10">
+			<p class="alert alert-warning">Bem vindo ao Meta ID. Caso queria conhecer mais sobre o seu painel <a href data-ng-click="vm.startTour()"><strong>clique aqui</strong>.</a></p>
+		</div>
+
 		<div class="col-md-9">
 			<!-- Widget: user widget style 1 -->
 			<div class="box box-widget widget-user-2">
@@ -19,7 +24,7 @@
 					<div class="widget-user-image">
 						<img class="img-circle" src="img/user2-160x160.jpg" alt="User Avatar">
 					</div><!-- /.widget-user-image -->
-					<h3 class="widget-user-username">Nome do Artista</h3>
+					<h3 class="widget-user-username">{{ vm.ente.nome }}</h3>
 					<h5 class="widget-user-desc">Musico Instrumentista</h5>
 				</div>
 			</div><!-- /.widget-user -->
