--- a/src/app/ente/ente.html
+++ b/src/app/ente/ente.html
@@ -16,57 +16,71 @@
 				<button type="button"
 					data-ng-class="vm.artisticStep ? 'btn btn-success btn-circle': 'btn btn-default btn-circle'"
 					disabled="disabled"><i class="fa fa-music fa-2x"></i></button>
-				<p data-ng-class="{'process-active': vm.artisticStep}">Dados Artísticos</p>
+				<p data-ng-class="{'process-active': vm.artisticStep}">Classificação Artística</p>
 			</div> 
 		</div>
 	</div>
+	<p ng-repeat="(name, errs) in vm.errors" class="alert alert-danger"><strong>Erro! </strong>: {{ errs.join(', ') }}</p>
 	<div class="register-box-body" data-ng-show="vm.basicStep">
-		<form action="../../index.html" method="post">
+		<form action="../../index.html" method="post" name="enteForm" novalidate>
 			<div class="form-group has-feedback">
-				<input type="text" class="form-control" placeholder="Nome Completo">
+				<input type="text" class="form-control" placeholder="Nome Completo" data-ng-model="vm.ente.nome" required>
 				<span class="glyphicon glyphicon-user form-control-feedback"></span>
 			</div>
 			<div class="form-group has-feedback">
-				<input type="text" class="form-control" placeholder="Endereço">
-				<span class="glyphicon glyphicon-home form-control-feedback"></span>
+				<div class="row">
+					<div class="col-xs-8">
+						<div class="form-group has-feedback">
+							<input type="text" class="form-control" placeholder="Endereço" data-ng-model="vm.geographic_informations.endereco" required>
+							<span class="glyphicon glyphicon-home form-control-feedback"></span>
+						</div>
+					</div>
+					<div class="col-xs-4">
+						<div class="form-group has-feedback">
+							<input type="text" class="form-control cep" placeholder="CEP" data-ng-model="vm.geographic_informations.cep" required>
+							<span class="glyphicon glyphicon-home form-control-feedback"></span>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="form-group has-feedback">
 				<div class="row">
 					<div class="col-xs-4">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="Bairro">
+							<input type="text" class="form-control" placeholder="Bairro" data-ng-model="vm.geographic_informations.bairro" required>
 							<span class="fa fa-flag form-control-feedback"></span>
 						</div>
 					</div>
 					<div class="col-xs-4">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="Cidade">
+							<input type="text" class="form-control" placeholder="Cidade" data-ng-model="vm.geographic_informations.cidade" required>
 							<span class="fa fa-flag form-control-feedback"></span>
 						</div>
 					</div>
 					<div class="col-xs-4">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="Estado">
+							<input type="text" class="form-control" placeholder="Distrito Federal"
+								data-ng-value="'DF'" disabled="disabled" data-ng-model="vm.geographic_informations.uf">
 							<span class="fa fa-flag form-control-feedback"></span>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="form-group has-feedback">
-				<input type="email" class="form-control" placeholder="E-mail">
+				<input type="email" class="form-control" placeholder="E-mail" data-ng-model="vm.ente.email" required>
 				<span class="glyphicon glyphicon-envelope form-control-feedback"></span>
 			</div>
 			<div class="form-group has-feedback">
 				<div class="row">
 					<div class="col-xs-4">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="CPF">
+							<input type="text" class="form-control cpf" placeholder="CPF" data-ng-model="vm.ente.cpf" required>
 							<span class="glyphicon glyphicon-modal-window form-control-feedback"></span>
 						</div>
 					</div>
 					<div class="col-xs-4">
 						<div class="form-group has-feedback">
-							<input type="text" class="form-control" placeholder="Data de Nascimento">
+							<input type="text" class="form-control birth" placeholder="Data de Nascimento" data-ng-model="vm.ente.nascimento" required>
 							<span class="glyphicon glyphicon-gift form-control-feedback"></span>
 						</div>
 					</div>
@@ -74,7 +88,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-4 right">
-					<a href class="btn btn-primary btn-block btn-flat" data-ng-click="vm.goEnteArtisticForm()">Próximo</a>
+					<a href class="btn btn-primary btn-block btn-flat" data-ng-click="vm.goEnteArtisticForm()" data-ng-disabled="enteForm.$invalid">Próximo</a>
 				</div>
 			</div>
 		</form>
@@ -83,30 +97,24 @@
 	</div>
 
 	<div class="register-box-body" data-ng-show="vm.artisticStep">
-		<form action="../../index.html" method="post">
+		<form action="../../index.html" method="post" name="artisticForm">
 			<div class="form-group">
 				<div class="row">
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label">Atuação Cultural</label>
-							<select class="form-control" data-ng-model="vm.classification.atuacao">
+							<select class="form-control" name="atuacao" data-ng-model="vm.classification.atuacao"
+								data-ng-options="atuacao.rotulo for atuacao in vm.artisticInputs.performances track by atuacao.valor" required>
 								<option>Selecione</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-								<option>5</option>
 							</select>
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label">Área Artística</label>
-							<select class="form-control" data-ng-model="vm.classification.area">
+							<select class="form-control" name="area" data-ng-model="vm.classification.area" data-ng-change="vm.listArtisticStyles()"
+								data-ng-options="area.value for area in vm.artisticInputs.areas track by area.index" data-ng-disabled="artisticForm.atuacao.$invalid" required>
 								<option>Selecione</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-								<option>5</option>
 							</select>
 						</div>
 					</div>
@@ -117,25 +125,16 @@
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label">Estilo Artístico</label>
-							<select class="form-control" data-ng-model="vm.classification.estilo">
+							<select class="form-control" data-ng-model="vm.classification.estilo" name="style"
+								data-ng-options="style for style in vm.artisticInputs.styles" data-ng-disabled="artisticForm.area.$invalid" required>
 								<option>Selecione</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-								<option>5</option>
 							</select>
 						</div>
 					</div>
 					<div class="col-xs-6">
 						<div class="form-group">
 							<label class="control-label">Tempo de Experiência</label>
-							<select class="form-control" data-ng-model="vm.classification.experiencia">
-								<option>Selecione</option>
-								<option>2</option>
-								<option>3</option>
-								<option>4</option>
-								<option>5</option>
-							</select>
+							<input class="form-control" type="number" min="1" data-ng-model="vm.classification.experiencia" data-ng-disabled="artisticForm.style.$invalid" required>
 						</div>
 					</div>
 				</div>
@@ -143,7 +142,7 @@
 			<div class="form-group">
 				<div class="row">
 					<div class="col-xs-5">
-						<a class="btn btn-success" href data-ng-click="vm.addClassification()">Adicionar Dados Artísticos</a>
+						<a class="btn btn-success" href data-ng-click="vm.addClassification()" data-ng-disabled="artisticForm.$invalid">Adicionar Dados Artísticos</a>
 					</div>
 				</div>
 			</div>
@@ -163,12 +162,15 @@
 							<tbody>
 								<tr data-ng-repeat="classification in vm.listClassifications">
 									<td>
-										<a class="btn btn-xs" href="#">Remover</a>
+										<a class="btn btn-xs" href data-ng-click="vm.removeClassification(classification)">Remover</a>
 									</td>
-									<td>Teste</td>
-									<td>Teste</td>
-									<td>Teste</td>
-									<td>Teste</td>
+									<td>{{ classification.atuacao }}</td>
+									<td>{{ classification.area }}</td>
+									<td>{{ classification.estilo }}</td>
+									<td>
+										<ng-pluralize count="classification.experiencia"
+											when="{'one': '1 ano', 'other': '{} anos'}">
+									</td>
 								</tr>
 							</tbody>
 						</table>
@@ -177,7 +179,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xs-4 right">
-					<a href class="btn btn-primary btn-block btn-flat">Finalizar</a>
+					<a href class="btn btn-primary btn-block btn-flat" data-ng-click="vm.createEnte()" data-ng-disabled="vm.listClassifications.length == 0">Finalizar</a>
 				</div>
 				<div class="col-xs-4 right">
 					<a href class="btn btn-primary btn-block btn-flat" data-ng-click="vm.goEnteBasicForm()">Voltar</a>
