--- a/src/app/documentations/documentations_general.html
+++ b/src/app/documentations/documentations_general.html
@@ -1,8 +1,9 @@
+<div data-ng-controller="DocumentationController as vm">
 <!-- Content Header (Page header) -->
-<section class="content-header">
+<section class="content-header" data-ng-intro-options="vm.introOptions", data-ng-intro-method="vm.startTour">
 	<h1>Documentações Gerais
 		<i class="fa fa-question-circle help" data-toggle="popover" data-trigger="hover"
-			data-content="Lista e insere os seus documentos como cidadão"></i>
+			data-content="Clique no ícone para saber mais das funções dessa página" data-ng-click="vm.startTour()"></i>
 	</h1>
 	<ol class="breadcrumb">
 		<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
@@ -14,34 +15,36 @@
 <section class="content">
 	<div class="row">
 		<div class="col-md-12">
+			<p data-ng-repeat="(name, errs) in vm.errors" class="alert alert-danger"><strong>Erro! </strong>: {{ errs.join(', ') }}</p>
+			<span class="progress" data-ng-show="vm.documento.arquivo.progress >= 0">
+				<p class="alert alert-info">{{vm.documento.arquivo.progress}}% Carregado</p>
+			</span>
+			<p class="alert alert-success" data-ng-show="vm.documento.arquivo.result">Documento enviado com sucesso.</p>
 			<!-- Widget: user widget style 1 -->
 			<div class="box box-widget box-documentation">
-				<form class="form-box">
+				<form class="form-box" name="documentationForm">
 					<div class="form-group">
 						<div class="row">
-							<div class="col-xs-4">
+							<div class="col-xs-4 tipo-documento">
 								<label for="exampleInputName2">Tipo de Documento</label>
-								<select class="form-control">
-									<option>Documento de Identificação (CNH / CI / RG)</option>
-									<option>Carteira de Habilitação</option>
-									<option>Certidão de Nascimento</option>
-								</select>
+								<input type="text" name="nome_documento" class="form-control" data-ng-model="vm.documento.nome" required>
 							</div>
-							<div class="col-xs-2">
+							<div class="col-xs-2 vencimento">
 								<label>Vence em:</label>
 								<div class="input-group">
 									<div class="input-group-addon">
 										<i class="fa fa-calendar"></i>
 									</div>
-									<input type="text" class="form-control" data-inputmask="'mask': '99/99/9999'">
+									<input type="text" name="vencimento" class="form-control" data-inputmask="'mask': '99/99/9999'" data-ng-model="vm.documento.vencimento" required>
 								</div><!-- /.input group -->
 							</div>
-							<div class="col-xs-3">
+							<div class="col-xs-3 arquivo">
 								<label for="exampleInputName2">Arquivo: </label>
-								<input class="input-file" type="file" name="">
+								<input class="input-file" type="file" data-ngf-select="" data-accept="document/*"
+								name="conteudo" data-ng-model="vm.documento.arquivo" required>
 							</div>
 							<div class="col-xs-1 submit">
-								<a href="#" class="btn btn-success">Adicionar Documento</a>
+								<a href data-ng-click="vm.createDocumentation()" class="btn btn-success">Adicionar Documento</a>
 							</div>
 						</div>
 					</div>
@@ -50,50 +53,21 @@
 		</div>
 	</div>
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-4" data-ng-repeat="documentation in vm.documentations">
 			<!-- Widget: user widget style 1 -->
 			<div class="box box-widget widget-user-2">
 				<!-- Add the bg color to the header using any of the bg-* classes -->
 				<div class="widget-user-header">
-					<div class="widget-user-image">
+					<div class="widget-doc-image">
 						<img src="img/user2-160x160.jpg" alt="User Avatar">
-					</div><!-- /.widget-user-image -->
+					</div><!-- /.widget-doc-image -->
 					<a href="#">
-					<h4 class="widget-documentation">Documento de Identificação</h4>
+						<h4 class="widget-documentation">{{ documentation.nome }}</h4>
 					</a>
-					<h5 class="widget-documentation-desc"><strong>Vence em:</strong> 17/05/2018</h5>
-				</div>
-			</div><!-- /.widget-user -->
-		</div>
-		<div class="col-md-4">
-			<!-- Widget: user widget style 1 -->
-			<div class="box box-widget widget-user-2">
-				<!-- Add the bg color to the header using any of the bg-* classes -->
-				<div class="widget-user-header">
-					<div class="widget-user-image">
-						<img src="img/user2-160x160.jpg" alt="User Avatar">
-					</div><!-- /.widget-user-image -->
-					<a href="#">
-					<h4 class="widget-documentation">Certidão de Nascimento</h4>
-					</a>
-					<h5 class="widget-documentation-desc"><strong>Vence em:</strong> 17/05/2018</h5>
-				</div>
-			</div><!-- /.widget-user -->
-		</div>
-		<div class="col-md-4">
-			<!-- Widget: user widget style 1 -->
-			<div class="box box-widget widget-user-2">
-				<!-- Add the bg color to the header using any of the bg-* classes -->
-				<div class="widget-user-header">
-					<div class="widget-user-image">
-						<img src="img/user2-160x160.jpg" alt="User Avatar">
-					</div><!-- /.widget-user-image -->
-					<a href="#">
-					<h4 class="widget-documentation">Carteira de Habilitação</h4>
-					</a>
-					<h5 class="widget-documentation-desc"><strong>Vence em:</strong> 17/05/2018</h5>
+					<h5 class="widget-documentation-desc"><strong>Vence em:</strong> {{ documentation.vencimento  }}</h5>
 				</div>
 			</div><!-- /.widget-user -->
 		</div>
 	</div>
 </section>
+</div>
